--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -7,10 +7,39 @@
     font-weight: 600;
     font-size: 1.2rem;
     letter-spacing: -1px;
-    -webkit-transform: scaleX(1.15);
-    -moz-transform: scaleX(1.15);
-    transform: scaleX(1.15);
+    -webkit-transform: scaleX(1.2);
+    -moz-transform: scaleX(1.2);
+    transform: scaleX(1.2);
 }
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+  .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+  }
+  .bar2 {
+    width: 30px;
+    margin-left: 5px;
+    opacity: 0;
+  }
+  .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+  }
+  .collapsed .bar1 {
+    transform: none;
+  }
+  
+  .collapsed .bar2 {opacity: 1;}
+  
+  .collapsed .bar3 {
+    transform: none;
+  }
 .nav-link {
     text-transform: uppercase;
     font-weight: 400;
@@ -18,6 +47,9 @@
     color: rgba(0,0,0,0.7) !important;
     letter-spacing: -1px;
     text-align: center;
+    -webkit-transform: scaleX(1.2);
+    -moz-tranform: scaleX(1.2);
+    transform: scaleX(1.2);
 }
 .nav-link:not(:nth-last-of-type(1)) {
     margin-right:5rem;
@@ -34,7 +66,13 @@
     .navbar-brand {
         margin-left: 1rem;
     }
+    .navbar-collapse {
+        padding-top: 15vh;
+    }
     .nav-link {
-        margin-right: 0 !important;
+        width: 75%;
+        margin: 0 auto !important;
+        /* transform: none; */
+        padding: 4vh .5rem;
     }
 }
