--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -13,10 +13,11 @@
 }
   .bar1, .bar2, .bar3 {
     width: 35px;
-    height: 5px;
+    height: 2px;
     background-color: #333;
     margin: 6px 0;
-    transition: 0.4s;
+    transition: 0.3s;
+    transform-origin: 13.5px 0px;
   }
   .bar1 {
     -webkit-transform: rotate(-45deg) translate(-9px, 6px);
@@ -25,6 +26,7 @@
   .bar2 {
     width: 30px;
     margin-left: 5px;
+    transform: scaleX(0);
     opacity: 0;
   }
   .bar3 {
@@ -35,7 +37,10 @@
     transform: none;
   }
   
-  .collapsed .bar2 {opacity: 1;}
+  .collapsed .bar2 {
+      opacity: 1;
+      transform: scaleX(1);
+    }
   
   .collapsed .bar3 {
     transform: none;
