--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 :root {
     --montserrat:'Montserrat', 'Open Sans', sans-serif;
+    --aileron: 'Aileron', 'Open Sans', sans-serif;
     --accent: rgb(255, 94, 0);
 }
 html, body {
