--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -3,4 +3,8 @@
     background-color: #fafaff;
     /* remove default jumbotron margin */
     margin-bottom: 0;
+    padding-top: 20vh;
+    padding-bottom: 5vh;
+    &__heading {
+    }
 }
