--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,6 +1,6 @@
 .navbar {
     padding: 1rem 1rem;
-    background-color: #fafaff;
+    background-color: #fcfcff;
     border-bottom: .5px ridge transparent;
 }
 .navbar-brand {
