added about heading and profile image

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,9 +35,13 @@ html, body {
 }
 @keyframes fadeIn {
     from {
+        visibility: hidden;
         opacity: 0;
+        filter: saturate(0);
     }
     to {
+        visibility: visible;
         opacity: 1;
+        filter: saturate(1);
     }
 }
