--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -63,7 +63,7 @@
     margin-right:5rem;
 }
 .nav-link:hover {
-    color: #000 !important;
+    color: var(--accent-light) !important;
 }
 
 .navbar-toggler {
