--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 :root {
     --montserrat:'Montserrat', 'Open Sans', sans-serif;
     --aileron: 'Aileron', 'Open Sans', sans-serif;
@@ -14,7 +15,7 @@ html, body {
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Aileron', sans-serif;
+    font-family: 'Inter', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     cursor: url('./assets/cursor.svg'), auto !important;
