--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -30,6 +30,10 @@
         }
     }
     &__text {
+      font-size: 1.25rem;
+      a {
+        color: rgb(0,50,100);
+      }
       @media (min-width: 801px) {
         padding-left: 2vw;
         transform-origin: bottom;
@@ -44,7 +48,6 @@
         }
         mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 90%, rgba(0,0,0,0) 99%);
         &__img {
-            image-rendering: pixelated;
             filter: saturate(1);
             width: 35vw;
             max-width: 30rem;
