--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -72,6 +72,7 @@
         .skill-icon {
             margin-left: .5rem;
             margin-right: .5rem;
+            margin-bottom: 1rem;
         }
         svg {
             font-size: 5rem;
