--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@ html, body {
                                     supported by Chrome, Edge, Opera and Firefox */
   }
 .section-content  {
-  min-height: 80vh;
+  min-height: 50vh;
   padding-bottom: 1vh;
   opacity: 0;
   animation: fadeIn 1s ease-in-out 1s forwards;
@@ -42,8 +42,7 @@ html, body {
     text-transform: uppercase;
     font-family: var(--montserrat);
     font-size: calc(1rem + 2vw);
-    margin-top: 15rem;
-    padding-bottom: 5rem;
+    margin-top: 2rem;
     &:hover {
         hr {
             border-color: var(--accent);
@@ -52,6 +51,8 @@ html, body {
     @media (min-width: 801px) {
         transform-origin: bottom;
         transform: translateY(-10vh);
+        margin-top: 15rem;
+        padding-bottom: 5rem;
     }
     @media (max-width: 800px) {
         text-align: center;
@@ -68,7 +69,7 @@ html, body {
 }
 .section-img {
     svg  {
-        filter: saturate(1);
+        opacity: 0.5;
         width: 20vw;
         max-width: 10rem;
         height: auto;
@@ -77,7 +78,8 @@ html, body {
             box-shadow: 0 .1rem 1rem #fff;
         }
         @media (max-width: 800px) {
-            width: 50vw;
+            width: 10vw;
+            max-width: 3rem;
             margin: 2vh auto;
         }
     }
