--- a/src/App.scss
+++ b/src/App.scss
@@ -1,104 +1,106 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 :root {
-    --montserrat:'Montserrat', 'Open Sans', sans-serif;
-    --aileron: 'Aileron', 'Open Sans', sans-serif;
-    --accent: rgb(255, 50, 0);
-    --accent-light: rgba(255, 50, 0, 0.85);
+  --montserrat: "Montserrat", "Open Sans", sans-serif;
+  --aileron: "Aileron", "Open Sans", sans-serif;
+  --accent: rgb(255, 50, 0);
+  --accent-light: rgba(255, 50, 0, 0.85);
 }
-html, body {
-    box-sizing: border-box;
-    background-color: #fcfcff;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
+html,
+body {
+  box-sizing: border-box;
+  background-color: #fcfcff;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 * {
-    padding: 0;
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    cursor: url('./assets/cursor.svg'), auto !important;
+  padding: 0;
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  cursor: url("./assets/cursor.svg"), auto !important;
 }
 .container-fluid {
-    width: 87.5%;
+  width: 87.5%;
 }
 .noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
-  }
-.section-content  {
+}
+.section-content {
   min-height: 50vh;
   padding-bottom: 1vh;
   opacity: 0;
   animation: fadeIn 1s ease-in-out 1s forwards;
 }
 .section-heading {
-    text-transform: uppercase;
-    font-family: var(--montserrat);
-    font-size: calc(1rem + 2vw);
-    margin-top: 2rem;
-    &:hover {
-        hr {
-            border-color: var(--accent);
-        }
-    }
-    @media (min-width: 801px) {
-        transform-origin: bottom;
-        transform: translateY(-10vh);
-        margin-top: 15rem;
-        padding-bottom: 5rem;
-    }
-    @media (max-width: 800px) {
-        text-align: center;
-    }
+  text-transform: uppercase;
+  font-family: var(--montserrat);
+  font-size: calc(1rem + 2vw);
+  margin-top: 2rem;
+  &:hover {
     hr {
-        margin: .5rem 0;
-        transition: .3s;
-        // max-width: 20rem;
-        @media (max-width: 800px) {
-            margin-left: auto;
-            margin-right: auto;
-        }
+      border-color: var(--accent);
     }
+  }
+  @media (min-width: 801px) {
+    transform-origin: bottom;
+    transform: translateY(-10vh);
+    margin-top: 15rem;
+    padding-bottom: 5rem;
+  }
+  @media (max-width: 800px) {
+    text-align: center;
+  }
+  hr {
+    margin: 0.5rem 0;
+    transition: 0.3s;
+    // max-width: 20rem;
+    @media (max-width: 800px) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 .section-img {
-    svg  {
-        opacity: 0.5;
-        width: 20vw;
-        max-width: 10rem;
-        height: auto;
-        transition: .3s ease-out;
-        &:hover, &:focus {
-            box-shadow: 0 .1rem 1rem #fff;
-        }
-        @media (max-width: 800px) {
-            width: 10vw;
-            max-width: 3rem;
-            margin: 2vh auto;
-        }
+  svg {
+    opacity: 0.5;
+    width: 20vw;
+    max-width: 10rem;
+    height: auto;
+    transition: 0.3s ease-out;
+    &:hover,
+    &:focus {
+      box-shadow: 0 0.1rem 1rem #fff;
     }
+    @media (max-width: 800px) {
+      width: 10vw;
+      max-width: 3rem;
+      margin: 2vh auto;
+    }
+  }
 }
 
 @media (max-width: 768px) {
-    .container-fluid {
-        width: 100%;
-    }
+  .container-fluid {
+    width: 100%;
+  }
 }
 @keyframes fadeIn {
-    from {
-        visibility: hidden;
-        opacity: 0;
-        filter: saturate(0);
-    }
-    to {
-        visibility: visible;
-        opacity: 1;
-        filter: saturate(1);
-    }
+  from {
+    visibility: hidden;
+    opacity: 0;
+    filter: saturate(0);
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+    filter: saturate(1);
+  }
 }
