--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,86 +1,88 @@
 .navbar {
-    padding: 1rem 1rem;
-    background-color: #fcfcff;
-    border-bottom: .5px ridge transparent;
+  padding: 1rem 1rem;
+  background-color: #fcfcff;
+  border-bottom: 0.5px ridge transparent;
 }
 .navbar-brand {
-    text-transform:uppercase;
-    color: rgba(0,0,0,.9);
-    font-weight: 600;
-    font-size: 1.2rem;
-    letter-spacing: -1px;
-    -webkit-transform: scaleX(1.2);
-    -moz-transform: scaleX(1.2);
-    transform: scaleX(1.2);
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.9);
+  font-weight: 600;
+  font-size: 1.2rem;
+  letter-spacing: -1px;
+  -webkit-transform: scaleX(1.2);
+  -moz-transform: scaleX(1.2);
+  transform: scaleX(1.2);
 }
-  .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 2px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.3s;
-    transform-origin: 13.5px 0px;
-  }
-  .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
-  }
-  .bar2 {
-    width: 30px;
-    margin-left: 5px;
-    transform: scaleX(0);
-    opacity: 0;
-  }
-  .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
-  }
-  .collapsed .bar1 {
-    transform: none;
-  }
-  
-  .collapsed .bar2 {
-      opacity: 1;
-      transform: scaleX(1);
-    }
-  
-  .collapsed .bar3 {
-    transform: none;
-  }
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 2px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.3s;
+  transform-origin: 13.5px 0px;
+}
+.bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+.bar2 {
+  width: 30px;
+  margin-left: 5px;
+  transform: scaleX(0);
+  opacity: 0;
+}
+.bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+.collapsed .bar1 {
+  transform: none;
+}
+
+.collapsed .bar2 {
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+.collapsed .bar3 {
+  transform: none;
+}
 .nav-link {
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 1.1rem;
-    color: rgba(0,0,0,0.6) !important;
-    letter-spacing: -1px;
-    text-align: center;
-    -webkit-transform: scaleX(1.2);
-    -moz-tranform: scaleX(1.2);
-    transform: scaleX(1.2);
-    transition: .1s;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 1.1rem;
+  color: rgba(0, 0, 0, 0.6) !important;
+  letter-spacing: -1px;
+  text-align: center;
+  -webkit-transform: scaleX(1.2);
+  -moz-tranform: scaleX(1.2);
+  transform: scaleX(1.2);
+  transition: 0.1s;
 }
 .nav-link:not(:nth-last-of-type(1)) {
-    margin-right:5rem;
+  margin-right: 5rem;
 }
 .nav-link:hover {
-    color: var(--accent-light) !important;
+  color: var(--accent-light) !important;
 }
 
 .navbar-toggler {
-    border: none;
+  border: none;
 }
 
 @media (max-width: 992px) {
-    .navbar-brand {
-        margin-left: 1rem;
-    }
-    .navbar-collapse {
-        padding-top: 15vh;
-    }
-    .nav-link {
-        width: 75%;
-        margin: 0 auto !important;
-        /* transform: none; */
-        padding: 4vh .5rem;
-    }
+  .navbar-brand {
+    margin-left: 1rem;
+  }
+  .navbar-collapse {
+    padding-top: 15vh;
+  }
+  .nav-link {
+    width: 75%;
+    margin: 0 auto !important;
+    /* transform: none; */
+    padding: 4vh 0.5rem;
+  }
 }
