--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -1,34 +1,34 @@
 .work {
-    &__text {
-      width: 100%;
-      font-size: 1.25rem;
-      padding-top: 3vh;
-      padding-bottom: 2vh;
-      a {
-        color: rgb(0,50,100);
+  &__text {
+    width: 100%;
+    font-size: 1.25rem;
+    padding-top: 3vh;
+    padding-bottom: 2vh;
+    a {
+      color: rgb(0, 50, 100);
+    }
+    @media (min-width: 801px) {
+      padding-left: 2vw;
+      transform-origin: bottom;
+      transform: translateY(-10vh);
+    }
+  }
+  &__subheading {
+    opacity: 0.8;
+  }
+  &__icons {
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    .skill-icon {
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+    }
+    svg {
+      font-size: 5rem;
+      @media (max-width: 800px) {
+        font-size: 3rem;
       }
-      @media (min-width: 801px) {
-        padding-left: 2vw;
-        transform-origin: bottom;
-        transform: translateY(-10vh);
-      }
     }
-    &__subheading {
-        opacity: .8;
-    }
-    &__icons {
-        width: 100%;
-        justify-content: center;
-        flex-wrap: wrap;
-        .skill-icon {
-            margin-left: .5rem;
-            margin-right: .5rem;
-        }
-        svg {
-            font-size: 5rem;
-            @media (max-width: 800px) {
-                font-size: 3rem;
-            }
-        }
-    }
+  }
 }
