integrated Kursor lib

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,7 @@ body {
   font-family: "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  cursor: url("./assets/cursor.svg"), auto !important;
+  // cursor: url("./assets/cursor.svg"), auto !important;
 }
 .container-fluid {
   width: 87.5%;
