Added background and translucent ProjectCard

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,4 +1,7 @@
 .about {
+  &__wrapper {
+    background: red;
+  }
   &__heading {
     text-transform: uppercase;
     font-family: var(--montserrat);
